array.island.Island.scala.error
Compilation error:
Island:5: error: '(' expected but identifier found.
    if num(a)>num(a+1){
       ^Island:8: error: illegal start of simple expression
  }
  ^